Added header block

--- a/index.html
+++ b/index.html
@@ -9,7 +9,30 @@
 </head>
 
 <body>
+    <div class="header">
+        <div class="header_logo">
+            <img src="img/logo.png" alt="logo img">
+            <p class="header_text1">GrowBe</p>
+        </div>
+        <div class="header_menu">
+            <ul>
+                <li class="menu_item"><a href="#" class="menu_link">Home</a></li>
+                <li class="menu_item"><a href="#" class="menu_link">About Us</a></li>
+                <li class="menu_item"><a href="#" class="menu_link">Services</a></li>
+                <li class="menu_item"><a href="#" class="menu_link">Features</a></li>
+                <li class="menu_item"><a href="#" class="menu_link">Team</a></li>
+                <li class="menu_item"><a href="#" class="menu_link">Blog</a></li>
+                <li class="menu_item"><a href="#" class="menu_link">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="top_content">
+        <div class="top_content_text">
 
+        </div>
+        <div class="top_content_img"></div>
+    </div>
 </body>
 
 </html>
+https://www.figma.com/file/45iQ2Gnwzp4ATa0y1Z70F4/Seo-%26-Digital-Marketing-Landing-Page-(Copy)?node-id=103%3A41&mode=dev
