Added all blocks and added some styles

--- a/index.html
+++ b/index.html
@@ -28,11 +28,38 @@
     </div>
     <div class="top_content">
         <div class="top_content_text">
-
+            <h1 class="top_content_header">SEO &amp;&nbsp;Digital Marketing For Your Website.</h1>
+            <p class="top_content_par">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
+            <div class="top_header_buttons">
+                <ul>
+                    <li class="menu_item"><button class="header_but1">Start Now</button></li>
+                    <li class="menu_item"><a href="#">Watch video</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="top_content_img"></div>
+        <div class="top_content_img"><img src="img/pngfind 1.png" alt="top_content_img"></div>
+    </div>
+    <div class="footer">
+        <ul class="footer_list">
+            <li class="footer_link">
+                <a href="#"><img src="img/footer/liva.png" alt="liva logo"></a>
+            </li>
+            <li class="footer_link">
+                <a href="#"><img src="img/footer/kanba.png" alt="kanba logo"></a>
+            </li>
+            <li class="footer_link">
+                <a href="#"><img src="img/footer/amara.png" alt="amara logo"></a>
+            </li>
+            <li class="footer_link">
+                <a href="#"><img src="img/footer/aven.png" alt="aven logo"></a>
+            </li>
+            <li class="footer_link">
+                <a href="#"><img src="img/footer/hexlab.png" alt="hexlab logo"></a>
+            </li>
+            <li class="footer_link">
+                <a href="#"><img src="img/footer/kanba1.png" alt="kanba1 logo"></a>
+            </li>
     </div>
 </body>
 
 </html>
-https://www.figma.com/file/45iQ2Gnwzp4ATa0y1Z70F4/Seo-%26-Digital-Marketing-Landing-Page-(Copy)?node-id=103%3A41&mode=dev
